--- a/portfolio.html
+++ b/portfolio.html
@@ -8,39 +8,51 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <!-- Шапка -->
     <header class="header">
-      <nav>
-        <!-- Логотип -->
-        <a href="./index.html" class="logo link">
-          <span class="logo-accent">Web</span> Studio
-        </a>
+      <div class="conteiner main-nav">
+        <nav class="main-nav">
+          <!-- Логотип -->
+          <a href="./index.html" class="logo link">
+            <span class="logo-accent">Web</span> Studio
+          </a>
 
-        <!-- Категории -->
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="./contacts.html" class="link">Контакты</a></li>
-        </ul>
-      </nav>
+          <!-- Категории -->
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="item">
+              <a href="./contacts.html" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-      <!-- Контакты -->
-      <address>
-        <ul class="contacts list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:380961111111" class="link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+        <!-- Контакты -->
+        <address class="main-nav">
+          <ul class="contacts list">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Уникальный контент -->
@@ -50,204 +62,221 @@
         <h1 class="portfolio-title-hidden">Наши работы</h1>
 
         <!-- Фильтр -->
-        <ul class="portfolio list">
-          <li>
-            <button type="button" class="portfolio-button current">
-              Веб-сайты
-            </button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Приложения</button>
-          </li>
-          <li><button type="button" class="portfolio-button">Все</button></li>
-          <li>
-            <button type="button" class="portfolio-button">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Маркетинг</button>
-          </li>
-        </ul>
+        <div class="conteiner">
+          <ul class="portfolio list">
+            <li>
+              <button type="button" class="portfolio-button current">
+                Веб-сайты
+              </button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Приложения</button>
+            </li>
+            <li><button type="button" class="portfolio-button">Все</button></li>
+            <li>
+              <button type="button" class="portfolio-button">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Маркетинг</button>
+            </li>
+          </ul>
 
-        <!-- Портфолио -->
-        <ul class="portfolio list">
-          <li>
-            <a href="" class="portfolio-link link">
-              <img
-                src="./images/portfolio/portfolio1.jpg"
-                alt="Веб-сайт Технокряк"
-              />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-aside">Веб-сайт</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="portfolio-link link">
-              <img
-                src="./images/portfolio/portfolio2.jpg"
-                alt="Постер New Orlean vs Golden Star"
-              />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-aside">Дизайн</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="portfolio-link link">
-              <img
-                src="./images/portfolio/portfolio3.jpg"
-                alt="Ресторан Seafood"
-              />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-aside">Приложение</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="portfolio-link link">
-              <img src="./images/portfolio/portfolio4.jpg" alt="Проект Prime" />
-              <h2 class="portfolio-title">Проект Prime</h2>
-              <p class="portfolio-aside">Маркетинг</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="portfolio-link link">
-              <img src="./images/portfolio/portfolio5.jpg" alt="Проект Boxes" />
-              <h2 class="portfolio-title">Проект Boxes</h2>
-              <p class="portfolio-aside">Приложение</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="portfolio-link link">
-              <img
-                src="./images/portfolio/portfolio6.jpg"
-                alt="Inspiration has no Borders"
-              />
-              <h2 lang="en" class="portfolio-title">
-                Inspiration has no Borders
-              </h2>
-              <p class="portfolio-aside">Веб-сайт</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="portfolio-link link">
-              <img
-                src="./images/portfolio/portfolio7.jpg"
-                alt="Издание Limited Edition"
-              />
-              <h2 class="portfolio-title">Издание Limited Edition</h2>
-              <p class="portfolio-aside">Дизайн</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="portfolio-link link">
-              <img src="./images/portfolio/portfolio8.jpg" alt="Проект LAB" />
-              <h2 class="portfolio-title">Проект LAB</h2>
-              <p class="portfolio-aside">Маркетинг</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="portfolio-link link">
-              <img
-                src="./images/portfolio/portfolio9.jpg"
-                alt="Growing Business"
-              />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-aside">Приложение</p>
-              <p class="portfolio-text">
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-            </a>
-          </li>
-        </ul>
+          <!-- Портфолио -->
+          <span class="portfolio-box">
+            <ul class="portfolio list">
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio1.jpg"
+                    alt="Веб-сайт Технокряк"
+                  />
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-aside">Веб-сайт</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                  />
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-aside">Дизайн</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio3.jpg"
+                    alt="Ресторан Seafood"
+                  />
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-aside">Приложение</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio4.jpg"
+                    alt="Проект Prime"
+                  />
+                  <h2 class="portfolio-title">Проект Prime</h2>
+                  <p class="portfolio-aside">Маркетинг</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio5.jpg"
+                    alt="Проект Boxes"
+                  />
+                  <h2 class="portfolio-title">Проект Boxes</h2>
+                  <p class="portfolio-aside">Приложение</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio6.jpg"
+                    alt="Inspiration has no Borders"
+                  />
+                  <h2 lang="en" class="portfolio-title">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="portfolio-aside">Веб-сайт</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio7.jpg"
+                    alt="Издание Limited Edition"
+                  />
+                  <h2 class="portfolio-title">Издание Limited Edition</h2>
+                  <p class="portfolio-aside">Дизайн</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio8.jpg"
+                    alt="Проект LAB"
+                  />
+                  <h2 class="portfolio-title">Проект LAB</h2>
+                  <p class="portfolio-aside">Маркетинг</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio9.jpg"
+                    alt="Growing Business"
+                  />
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-aside">Приложение</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </li>
+            </ul>
+          </span>
+        </div>
       </section>
     </main>
 
     <!-- Подвал -->
-    <footer class="footer">
-      <a href="./index.html" class="logo link">
-        <span class="logo-accent">Web</span> Studio
-      </a>
+    <div class="conteiner">
+      <footer class="footer">
+        <a href="./index.html" class="logo link">
+          <span class="logo-accent">Web</span> Studio
+        </a>
 
-      <address class="address-footer">
-        г. Киев, пр-т Леси Украинки, 26
-        <ul class="list">
+        <address class="address-footer">
+          г. Киев, пр-т Леси Украинки, 26
+          <ul class="list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts link"
+                >info@devstudio.com
+              </a>
+            </li>
+            <li>
+              <a href="tel:380961111111" class="contacts link"
+                >+38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </address>
+
+        <!-- Мы в соцсетях -->
+
+        <b class="social">Присоединяйтесь</b>
+        <ul class="label list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts link"
-              >info@devstudio.com
-            </a>
+            <a href="" class="link" aria-label="мы в facebook">Facebook</a>
           </li>
           <li>
-            <a href="tel:380961111111" class="contacts link"
-              >+38 096 111 11 11
-            </a>
+            <a href="" class="link" aria-label="мы в twitter">Twitter</a>
+          </li>
+          <li>
+            <a href="" class="link" aria-label="мы в instagram">Instagram</a>
+          </li>
+          <li>
+            <a href="" class="link" aria-label="мы в linkedIn">LinkedIn</a>
           </li>
         </ul>
-      </address>
 
-      <!-- Мы в соцсетях -->
+        <!-- Форма подписки -->
+        <b class="newsletter">Подпишитесь на рассылку</b>
+        <a href="" class="button link">Подписаться</a>
 
-      <b class="social">Присоединяйтесь</b>
-      <ul class="label list">
-        <li>
-          <a href="" class="link" aria-label="мы в facebook">Facebook</a>
-        </li>
-        <li>
-          <a href="" class="link" aria-label="мы в twitter">Twitter</a>
-        </li>
-        <li>
-          <a href="" class="link" aria-label="мы в instagram">Instagram</a>
-        </li>
-        <li>
-          <a href="" class="link" aria-label="мы в linkedIn">LinkedIn</a>
-        </li>
-      </ul>
-
-      <!-- Форма подписки -->
-      <b class="newsletter">Подпишитесь на рассылку</b>
-      <a href="" class="button link">Подписаться</a>
-
-      <!-- Копирайт -->
-      <p class="copyright">2020 | Developed by GoIT Students</p>
-    </footer>
+        <!-- Копирайт -->
+        <p class="copyright">2020 | Developed by GoIT Students</p>
+      </footer>
+    </div>
   </body>
 </html>
