--- a/portfolio.html
+++ b/portfolio.html
@@ -64,27 +64,31 @@
         <!-- Фильтр -->
         <div class="conteiner">
           <ul class="portfolio list">
-            <li>
+            <li class="btn-item">
               <button type="button" class="portfolio-button current">
                 Веб-сайты
               </button>
             </li>
-            <li>
+            <li class="btn-item">
               <button type="button" class="portfolio-button">Приложения</button>
             </li>
-            <li><button type="button" class="portfolio-button">Все</button></li>
-            <li>
+            <li class="btn-item">
+              <button type="button" class="portfolio-button">Все</button>
+            </li>
+            <li class="btn-item">
               <button type="button" class="portfolio-button">Дизайн</button>
             </li>
-            <li>
+            <li class="btn-item">
               <button type="button" class="portfolio-button">Маркетинг</button>
             </li>
           </ul>
+        </div>
 
-          <!-- Портфолио -->
+        <!-- Портфолио -->
+        <div class="conteiner">
           <span class="portfolio-box">
             <ul class="portfolio list">
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio1.jpg"
@@ -99,7 +103,7 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio2.jpg"
@@ -116,7 +120,7 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio3.jpg"
@@ -131,7 +135,7 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio4.jpg"
@@ -146,7 +150,7 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio5.jpg"
@@ -161,7 +165,7 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio6.jpg"
@@ -178,7 +182,7 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio7.jpg"
@@ -193,7 +197,7 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio8.jpg"
@@ -208,7 +212,7 @@
                   </p>
                 </a>
               </li>
-              <li>
+              <li class="item">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio9.jpg"
