--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
       <!-- Преимущества -->
 
       <section class="features">
+        <!-- Невидимый заголовок -->
+        <h2 class="features-title-hidden">Наши преимущества</h2>
+
         <div class="conteiner">
-          <!-- Невидимый заголовок -->
-          <h2 class="features-title-hidden">Наши преимущества</h2>
           <ul class="features-list list">
             <li class="item">
               <img src="./images/icons/Vector.svg" alt="Внимание к деталям" />
@@ -113,8 +114,8 @@
       <section class="section-activity">
         <div class="conteiner">
           <h2 class="activity-title">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li>
+          <ul class="activity-list list">
+            <li class="item">
               <img
                 src="./images/box/box.jpg"
                 alt="Десктопные приложения"
@@ -124,7 +125,7 @@
                 >Десктопные приложения</a
               >
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/box/box2.jpg"
                 alt="Мобильные приложения"
@@ -132,7 +133,7 @@
               />
               <a href="" class="activity-subtitle link">Мобильные приложения</a>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/box/box3.jpg"
                 alt="Дизайнерские решения"
@@ -148,7 +149,7 @@
       <section class="section-team">
         <div class="conteiner">
           <h2 class="team-title">Наша команда</h2>
-          <ul class="list">
+          <ul class="team-list list">
             <li>
               <img
                 src="./images/team/team.jpg"
