Обновила отступы, начала работать над футером

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
     <main>
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <a href="" class="button link">Заказать услугу</a>
+        <div class="conteiner-hero">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <a href="" class="button link">Заказать услугу</a>
+        </div>
       </section>
 
       <!-- Преимущества -->
@@ -71,7 +73,9 @@
         <div class="conteiner">
           <ul class="features-list list">
             <li class="item">
-              <img src="./images/icons/Vector.svg" alt="Внимание к деталям" />
+              <div class="features-img">
+                <img src="./images/icons/Vector.svg" alt="Внимание к деталям" />
+              </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -79,7 +83,9 @@
               </p>
             </li>
             <li class="item">
-              <img src="./images/icons/Vector1.svg" alt="Пунктуальность" />
+              <div class="features-img">
+                <img src="./images/icons/Vector1.svg" alt="Пунктуальность" />
+              </div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -87,7 +93,9 @@
               </p>
             </li>
             <li class="item">
-              <img src="./images/icons/Vector2.svg" alt="Планирование" />
+              <div class="features-img">
+                <img src="./images/icons/Vector2.svg" alt="Планирование" />
+              </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
@@ -95,10 +103,12 @@
               </p>
             </li>
             <li class="item">
-              <img
-                src="./images/icons/Vector3.svg"
-                alt="Современные технологии"
-              />
+              <div class="features-img">
+                <img
+                  src="./images/icons/Vector3.svg"
+                  alt="Современные технологии"
+                />
+              </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -150,7 +160,7 @@
         <div class="conteiner">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
-            <li>
+            <li class="item">
               <img
                 src="./images/team/team.jpg"
                 alt="Николай Кучеренко"
@@ -182,7 +192,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/team/team2.jpg"
                 alt="Ольга Иванова"
@@ -214,7 +224,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/team/team3.jpg"
                 alt="Андрей Шевченко"
@@ -246,7 +256,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/team/team4.jpg"
                 alt="Иван Николаев"
@@ -288,52 +298,64 @@
         <div class="conteiner">
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list list">
-            <li>
-              <img
-                src="./images/clients/logo1.svg"
-                class="clients-logo"
-                alt="Логотип компании"
-              />
+            <li class="item">
+              <div class="features-img">
+                <img
+                  src="./images/clients/logo1.svg"
+                  class="clients-logo"
+                  alt="Логотип компании"
+                />
+              </div>
               <a href=""></a>
             </li>
-            <li>
-              <img
-                src="./images/clients/logo2.svg"
-                class="clients-logo"
-                alt="Логотип компании"
-              />
+            <li class="item">
+              <div class="features-img">
+                <img
+                  src="./images/clients/logo2.svg"
+                  class="clients-logo"
+                  alt="Логотип компании"
+                />
+              </div>
               <a href=""></a>
             </li>
-            <li>
-              <img
-                src="./images/clients/logo3.svg"
-                class="clients-logo"
-                alt="Логотип компании"
-              />
+            <li class="item">
+              <div class="features-img">
+                <img
+                  src="./images/clients/logo3.svg"
+                  class="clients-logo"
+                  alt="Логотип компании"
+                />
+              </div>
               <a href=""></a>
             </li>
-            <li>
-              <img
-                src="./images/clients/logo4.svg"
-                class="clients-logo"
-                alt="Логотип компании"
-              />
+            <li class="item">
+              <div class="features-img">
+                <img
+                  src="./images/clients/logo4.svg"
+                  class="clients-logo"
+                  alt="Логотип компании"
+                />
+              </div>
               <a href=""></a>
             </li>
-            <li>
-              <img
-                src="./images/clients/logo5.svg"
-                class="clients-logo"
-                alt="Логотип компании"
-              />
+            <li class="item">
+              <div class="features-img">
+                <img
+                  src="./images/clients/logo5.svg"
+                  class="clients-logo"
+                  alt="Логотип компании"
+                />
+              </div>
               <a href=""></a>
             </li>
-            <li>
-              <img
-                src="./images/clients/logo6.svg"
-                class="clients-logo"
-                alt="Логотип компании"
-              />
+            <li class="item">
+              <div class="features-img">
+                <img
+                  src="./images/clients/logo6.svg"
+                  class="clients-logo"
+                  alt="Логотип компании"
+                />
+              </div>
               <a href=""></a>
             </li>
           </ul>
@@ -342,8 +364,9 @@
     </main>
 
     <!-- Подвал -->
-    <div class="conteiner">
-      <footer class="footer">
+
+    <footer class="footer">
+      <div class="conteiner">
         <a href="./index.html" class="logo link">
           <span class="logo-accent">Web</span> Studio
         </a>
@@ -365,7 +388,6 @@
         </address>
 
         <!-- Мы в соцсетях -->
-
         <b class="social">Присоединяйтесь</b>
         <ul class="label list">
           <li>
@@ -385,10 +407,7 @@
         <!-- Форма подписки -->
         <b class="newsletter">Подпишитесь на рассылку</b>
         <a href="" class="button link">Подписаться</a>
-
-        <!-- Копирайт -->
-        <p class="copyright">2020 | Developed by GoIT Students</p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
