--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <!-- Шапка -->
     <header class="header">
-      <div class="conteiner header-portfolio main-nav">
+      <div class="conteiner main-nav">
         <nav class="main-nav">
           <!-- Логотип -->
           <a href="./index.html" class="logo link">
@@ -82,10 +82,8 @@
               <button type="button" class="portfolio-button">Маркетинг</button>
             </li>
           </ul>
-        </div>
 
-        <!-- Портфолио -->
-        <div class="conteiner">
+          <!-- Портфолио -->
           <ul class="portfolio list">
             <li class="item">
               <a href="" class="portfolio-link link">
@@ -229,8 +227,8 @@
     </main>
 
     <!-- Подвал -->
-    <div class="conteiner">
-      <footer class="footer">
+    <footer class="footer">
+      <div class="conteiner">
         <a href="./index.html" class="logo link">
           <span class="logo-accent">Web</span> Studio
         </a>
@@ -252,7 +250,6 @@
         </address>
 
         <!-- Мы в соцсетях -->
-
         <b class="social">Присоединяйтесь</b>
         <ul class="label list">
           <li>
@@ -272,10 +269,7 @@
         <!-- Форма подписки -->
         <b class="newsletter">Подпишитесь на рассылку</b>
         <a href="" class="button link">Подписаться</a>
-
-        <!-- Копирайт -->
-        <p class="copyright">2020 | Developed by GoIT Students</p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
