--- a/portfolio.html
+++ b/portfolio.html
@@ -86,140 +86,161 @@
           <!-- Портфолио -->
           <ul class="portfolio list">
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img
-                  src="./images/portfolio/portfolio1.jpg"
-                  alt="Веб-сайт Технокряк"
-                />
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-aside">Веб-сайт</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio1.jpg"
+                    alt="Веб-сайт Технокряк"
+                  />
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-aside">Веб-сайт</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img
-                  src="./images/portfolio/portfolio2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                />
-                <h2 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-aside">Дизайн</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                  />
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-aside">Дизайн</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img
-                  src="./images/portfolio/portfolio3.jpg"
-                  alt="Ресторан Seafood"
-                />
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-aside">Приложение</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio3.jpg"
+                    alt="Ресторан Seafood"
+                  />
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-aside">Приложение</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img
-                  src="./images/portfolio/portfolio4.jpg"
-                  alt="Проект Prime"
-                />
-                <h2 class="portfolio-title">Проект Prime</h2>
-                <p class="portfolio-aside">Маркетинг</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio4.jpg"
+                    alt="Проект Prime"
+                  />
+                  <h2 class="portfolio-title">Проект Prime</h2>
+                  <p class="portfolio-aside">Маркетинг</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img
-                  src="./images/portfolio/portfolio5.jpg"
-                  alt="Проект Boxes"
-                />
-                <h2 class="portfolio-title">Проект Boxes</h2>
-                <p class="portfolio-aside">Приложение</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio5.jpg"
+                    alt="Проект Boxes"
+                  />
+                  <h2 class="portfolio-title">Проект Boxes</h2>
+                  <p class="portfolio-aside">Приложение</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img
-                  src="./images/portfolio/portfolio6.jpg"
-                  alt="Inspiration has no Borders"
-                />
-                <h2 lang="en" class="portfolio-title">
-                  Inspiration has no Borders
-                </h2>
-                <p class="portfolio-aside">Веб-сайт</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio6.jpg"
+                    alt="Inspiration has no Borders"
+                  />
+                  <h2 lang="en" class="portfolio-title">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="portfolio-aside">Веб-сайт</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img
-                  src="./images/portfolio/portfolio7.jpg"
-                  alt="Издание Limited Edition"
-                />
-                <h2 class="portfolio-title">Издание Limited Edition</h2>
-                <p class="portfolio-aside">Дизайн</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio7.jpg"
+                    alt="Издание Limited Edition"
+                  />
+                  <h2 class="portfolio-title">Издание Limited Edition</h2>
+                  <p class="portfolio-aside">Дизайн</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img src="./images/portfolio/portfolio8.jpg" alt="Проект LAB" />
-                <h2 class="portfolio-title">Проект LAB</h2>
-                <p class="portfolio-aside">Маркетинг</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio8.jpg"
+                    alt="Проект LAB"
+                  />
+                  <h2 class="portfolio-title">Проект LAB</h2>
+                  <p class="portfolio-aside">Маркетинг</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link link">
-                <img
-                  src="./images/portfolio/portfolio9.jpg"
-                  alt="Growing Business"
-                />
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-aside">Приложение</p>
-                <p class="portfolio-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="conteiner-portfolio">
+                <a href="" class="portfolio-link link">
+                  <img
+                    src="./images/portfolio/portfolio9.jpg"
+                    alt="Growing Business"
+                  />
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-aside">Приложение</p>
+                  <p class="portfolio-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
