Исправила отступы + корректировки

--- a/index.html
+++ b/index.html
@@ -126,30 +126,32 @@
           <h2 class="activity-title">Чем мы занимаемся</h2>
           <ul class="activity-list list">
             <li class="item">
-              <img
-                src="./images/box/box.jpg"
-                alt="Десктопные приложения"
-                width="370"
-              />
-              <a href="" class="activity-subtitle link"
-                >Десктопные приложения</a
-              >
+              <a href="" class="link"
+                ><img
+                  src="./images/box/box.jpg"
+                  alt="Десктопные приложения"
+                  width="370"
+                />
+              </a>
+              <h3 class="activity-subtitle">Десктопные приложения</h3>
             </li>
             <li class="item">
-              <img
-                src="./images/box/box2.jpg"
-                alt="Мобильные приложения"
-                width="370"
-              />
-              <a href="" class="activity-subtitle link">Мобильные приложения</a>
+              <a href="" class="link"
+                ><img
+                  src="./images/box/box2.jpg"
+                  alt="Мобильные приложения"
+                  width="370"
+              /></a>
+              <h3 class="activity-subtitle">Мобильные приложения</h3>
             </li>
             <li class="item">
-              <img
-                src="./images/box/box3.jpg"
-                alt="Дизайнерские решения"
-                width="370"
-              />
-              <a href="" class="activity-subtitle link">Дизайнерские решения</a>
+              <a href="" class="link"
+                ><img
+                  src="./images/box/box3.jpg"
+                  alt="Дизайнерские решения"
+                  width="370"
+              /></a>
+              <h3 class="activity-subtitle">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
@@ -170,24 +172,40 @@
               <p lang="en" class="team-aside">Product Designer</p>
               <!-- соцсети -->
               <ul class="team-social list">
-                <li>
-                  <a href="" class="link" aria-label="ссылка на facebook"
-                    >Facebook
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на facebook">
+                    <img
+                      src="./images/icons/facebook.svg"
+                      alt="Николай Кучеренко ссылка на facebook"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на twitter"
-                    >Twitter
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на twitter">
+                    <img
+                      src="./images/icons/twitter.svg"
+                      alt="Николай Кучеренко ссылка на twitter"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на instagram"
-                    >Instagram
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на instagram">
+                    <img
+                      src="./images/icons/instagram.svg"
+                      alt="Николай Кучеренко ссылка на instagram"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на linkedIn"
-                    >LinkedIn
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на linkedIn">
+                    <img
+                      src="./images/icons/linkedin.svg"
+                      alt="Николай Кучеренко ссылка на linkedIn"
+                      width="44"
+                    />
                   </a>
                 </li>
               </ul>
@@ -202,24 +220,40 @@
               <p lang="en" class="team-aside">Frontend Developer</p>
               <!-- соцсети -->
               <ul class="team-social list">
-                <li>
-                  <a href="" class="link" aria-label="ссылка на facebook"
-                    >Facebook
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на facebook">
+                    <img
+                      src="./images/icons/facebook.svg"
+                      alt="Ольга Иванова ссылка на facebook"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на twitter"
-                    >Twitter
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на twitter">
+                    <img
+                      src="./images/icons/twitter.svg"
+                      alt="Ольга Иванова ссылка на twitter"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на instagram"
-                    >Instagram
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на instagram">
+                    <img
+                      src="./images/icons/instagram.svg"
+                      alt="Ольга Иванова ссылка на instagram"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на linkedIn"
-                    >LinkedIn
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на linkedIn">
+                    <img
+                      src="./images/icons/linkedin.svg"
+                      alt="Ольга Иванова ссылка на linkedIn"
+                      width="44"
+                    />
                   </a>
                 </li>
               </ul>
@@ -234,24 +268,40 @@
               <p lang="en" class="team-aside">Marketing</p>
               <!-- соцсети -->
               <ul class="team-social list">
-                <li>
-                  <a href="" class="link" aria-label="ссылка на facebook"
-                    >Facebook
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на facebook">
+                    <img
+                      src="./images/icons/facebook.svg"
+                      alt="Андрей Шевченко ссылка на facebook"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на twitter"
-                    >Twitter
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на twitter">
+                    <img
+                      src="./images/icons/twitter.svg"
+                      alt="Андрей Шевченко ссылка на twitter"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на instagram"
-                    >Instagram
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на instagram">
+                    <img
+                      src="./images/icons/instagram.svg"
+                      alt="Андрей Шевченко ссылка на instagram"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на linkedIn"
-                    >LinkedIn
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на linkedIn">
+                    <img
+                      src="./images/icons/linkedin.svg"
+                      alt="Андрей Шевченко ссылка на linkedIn"
+                      width="44"
+                    />
                   </a>
                 </li>
               </ul>
@@ -266,24 +316,40 @@
               <p lang="en" class="team-aside">UI Designer</p>
               <!-- соцсети -->
               <ul class="team-social list">
-                <li>
-                  <a href="" class="link" aria-label="ссылка на facebook"
-                    >Facebook
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на facebook">
+                    <img
+                      src="./images/icons/facebook.svg"
+                      alt="Иван Николаев ссылка на facebook"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на twitter"
-                    >Twitter
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на twitter">
+                    <img
+                      src="./images/icons/twitter.svg"
+                      alt="Иван Николаев ссылка на twitter"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на instagram"
-                    >Instagram
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на instagram">
+                    <img
+                      src="./images/icons/instagram.svg"
+                      alt="Иван Николаев ссылка на instagram"
+                      width="44"
+                    />
                   </a>
                 </li>
-                <li>
-                  <a href="" class="link" aria-label="ссылка на linkedIn"
-                    >LinkedIn
+                <li class="team-icons">
+                  <a href="" aria-label="ссылка на linkedIn">
+                    <img
+                      src="./images/icons/linkedin.svg"
+                      alt="Иван Николаев ссылка на linkedIn"
+                      width="44"
+                    />
                   </a>
                 </li>
               </ul>
@@ -299,64 +365,66 @@
           <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list list">
             <li class="item">
-              <div class="features-img">
-                <img
-                  src="./images/clients/logo1.svg"
-                  class="clients-logo"
-                  alt="Логотип компании"
-                />
+              <div class="clients-img">
+                <a href=""
+                  ><img
+                    src="./images/clients/logo1.svg"
+                    class="clients-logo"
+                    alt="Логотип компании"
+                /></a>
               </div>
-              <a href=""></a>
             </li>
             <li class="item">
-              <div class="features-img">
-                <img
-                  src="./images/clients/logo2.svg"
-                  class="clients-logo"
-                  alt="Логотип компании"
-                />
+              <div class="clients-img">
+                <a href="">
+                  <img
+                    src="./images/clients/logo2.svg"
+                    class="clients-logo"
+                    alt="Логотип компании"
+                  />
+                </a>
               </div>
-              <a href=""></a>
             </li>
             <li class="item">
-              <div class="features-img">
-                <img
-                  src="./images/clients/logo3.svg"
-                  class="clients-logo"
-                  alt="Логотип компании"
-                />
+              <div class="clients-img">
+                <a href="">
+                  <img
+                    src="./images/clients/logo3.svg"
+                    class="clients-logo"
+                    alt="Логотип компании"
+                  />
+                </a>
               </div>
-              <a href=""></a>
             </li>
             <li class="item">
-              <div class="features-img">
-                <img
-                  src="./images/clients/logo4.svg"
-                  class="clients-logo"
-                  alt="Логотип компании"
-                />
+              <div class="clients-img">
+                <a href="">
+                  <img
+                    src="./images/clients/logo4.svg"
+                    class="clients-logo"
+                    alt="Логотип компании"
+                /></a>
               </div>
-              <a href=""></a>
             </li>
             <li class="item">
-              <div class="features-img">
-                <img
-                  src="./images/clients/logo5.svg"
-                  class="clients-logo"
-                  alt="Логотип компании"
-                />
+              <div class="clients-img">
+                <a href="">
+                  <img
+                    src="./images/clients/logo5.svg"
+                    class="clients-logo"
+                    alt="Логотип компании"
+                /></a>
               </div>
-              <a href=""></a>
             </li>
             <li class="item">
-              <div class="features-img">
-                <img
-                  src="./images/clients/logo6.svg"
-                  class="clients-logo"
-                  alt="Логотип компании"
-                />
+              <div class="client-img">
+                <a href="">
+                  <img
+                    src="./images/clients/logo6.svg"
+                    class="clients-logo"
+                    alt="Логотип компании"
+                /></a>
               </div>
-              <a href=""></a>
             </li>
           </ul>
         </div>
@@ -367,46 +435,61 @@
 
     <footer class="footer">
       <div class="conteiner">
-        <a href="./index.html" class="logo link">
-          <span class="logo-accent">Web</span> Studio
-        </a>
+        <div class="adress-item">
+          <a href="./index.html" class="logo link">
+            <span class="logo-accent">Web</span>
+            <span class="logo-invert">Studio</span>
+          </a>
+          <address class="address-footer">
+            <span>г. Киев, пр-т Леси Украинки, 26</span>
+            <a href="mailto:info@devstudio.com" class="contacts-footer link"
+              >info@devstudio.com
+            </a>
 
-        <address class="address-footer">
-          г. Киев, пр-т Леси Украинки, 26
-          <ul class="list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="contacts link"
-                >info@devstudio.com
-              </a>
-            </li>
-            <li>
-              <a href="tel:380961111111" class="contacts link"
-                >+38 096 111 11 11
-              </a>
-            </li>
-          </ul>
-        </address>
+            <a href="tel:380961111111" class="contacts-footer link"
+              >+38 096 111 11 11
+            </a>
+          </address>
+        </div>
 
         <!-- Мы в соцсетях -->
-        <b class="social">Присоединяйтесь</b>
-        <ul class="label list">
-          <li>
-            <a href="" class="link" aria-label="мы в facebook">Facebook</a>
-          </li>
-          <li>
-            <a href="" class="link" aria-label="мы в twitter">Twitter</a>
-          </li>
-          <li>
-            <a href="" class="link" aria-label="мы в instagram">Instagram</a>
-          </li>
-          <li>
-            <a href="" class="link" aria-label="мы в linkedIn">LinkedIn</a>
-          </li>
-        </ul>
+        <div class="social-list">
+          <b class="social">Присоединяйтесь</b>
+          <ul class="label list">
+            <li class="item">
+              <a href="" class="link" aria-label="мы в facebook">
+                <img
+                  src="./images/icons/footer-facebook.svg"
+                  alt="мы в facebook"
+              /></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="мы в twitter">
+                <img src="./images/icons/footer-twitter.svg" alt="мы в twitter"
+              /></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="мы в instagram">
+                <img
+                  src="./images/icons/footer-instagram.svg"
+                  alt="мы в instagram"
+              /></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="мы в linkedIn">
+                <img
+                  src="./images/icons/footer-linkedin.svg"
+                  alt="мы в linkedIn"
+              /></a>
+            </li>
+          </ul>
+        </div>
 
         <!-- Форма подписки -->
-        <b class="newsletter">Подпишитесь на рассылку</b>
-        <a href="" class="button link">Подписаться</a>
+        <div class="newsletter-list">
+          <b class="newsletter">Подпишитесь на рассылку</b>
+          <a href="" class="button link">Подписаться</a>
+        </div>
       </div>
     </footer>
   </body>
