--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
           <!-- Портфолио -->
           <ul class="portfolio list">
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio1.jpg"
@@ -100,10 +100,10 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio2.jpg"
@@ -119,10 +119,10 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio3.jpg"
@@ -136,10 +136,10 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio4.jpg"
@@ -153,10 +153,10 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio5.jpg"
@@ -170,10 +170,10 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio6.jpg"
@@ -189,10 +189,10 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio7.jpg"
@@ -206,10 +206,10 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio8.jpg"
@@ -223,10 +223,10 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
             <li class="item">
-              <div class="conteiner-portfolio">
+              <span class="conteiner-portfolio">
                 <a href="" class="portfolio-link link">
                   <img
                     src="./images/portfolio/portfolio9.jpg"
@@ -240,7 +240,7 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </a>
-              </div>
+              </span>
             </li>
           </ul>
         </div>
