--- a/portfolio.html
+++ b/portfolio.html
@@ -250,46 +250,61 @@
     <!-- Подвал -->
     <footer class="footer">
       <div class="conteiner">
-        <a href="./index.html" class="logo link">
-          <span class="logo-accent">Web</span> Studio
-        </a>
+        <div class="adress-item">
+          <a href="./index.html" class="logo link">
+            <span class="logo-accent">Web</span>
+            <span class="logo-invert">Studio</span>
+          </a>
+          <address class="address-footer">
+            <span>г. Киев, пр-т Леси Украинки, 26</span>
+            <a href="mailto:info@devstudio.com" class="contacts-footer link"
+              >info@devstudio.com
+            </a>
 
-        <address class="address-footer">
-          г. Киев, пр-т Леси Украинки, 26
-          <ul class="list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="contacts link"
-                >info@devstudio.com
-              </a>
-            </li>
-            <li>
-              <a href="tel:380961111111" class="contacts link"
-                >+38 096 111 11 11
-              </a>
-            </li>
-          </ul>
-        </address>
+            <a href="tel:380961111111" class="contacts-footer link"
+              >+38 096 111 11 11
+            </a>
+          </address>
+        </div>
 
         <!-- Мы в соцсетях -->
-        <b class="social">Присоединяйтесь</b>
-        <ul class="label list">
-          <li>
-            <a href="" class="link" aria-label="мы в facebook">Facebook</a>
-          </li>
-          <li>
-            <a href="" class="link" aria-label="мы в twitter">Twitter</a>
-          </li>
-          <li>
-            <a href="" class="link" aria-label="мы в instagram">Instagram</a>
-          </li>
-          <li>
-            <a href="" class="link" aria-label="мы в linkedIn">LinkedIn</a>
-          </li>
-        </ul>
+        <div class="social-list">
+          <b class="social">Присоединяйтесь</b>
+          <ul class="label list">
+            <li class="item">
+              <a href="" class="link" aria-label="мы в facebook">
+                <img
+                  src="./images/icons/footer-facebook.svg"
+                  alt="мы в facebook"
+              /></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="мы в twitter">
+                <img src="./images/icons/footer-twitter.svg" alt="мы в twitter"
+              /></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="мы в instagram">
+                <img
+                  src="./images/icons/footer-instagram.svg"
+                  alt="мы в instagram"
+              /></a>
+            </li>
+            <li class="item">
+              <a href="" class="link" aria-label="мы в linkedIn">
+                <img
+                  src="./images/icons/footer-linkedin.svg"
+                  alt="мы в linkedIn"
+              /></a>
+            </li>
+          </ul>
+        </div>
 
         <!-- Форма подписки -->
-        <b class="newsletter">Подпишитесь на рассылку</b>
-        <a href="" class="button link">Подписаться</a>
+        <div class="newsletter-list">
+          <b class="newsletter">Подпишитесь на рассылку</b>
+          <a href="" class="button link">Подписаться</a>
+        </div>
       </div>
     </footer>
   </body>
